# Flowstate

./: .gitignore  LICENSE  NETWATCH_README.md  README.md  build_backend.bat  build_dev.bat  build_release.bat  netwatch-backend.spec  netwatch_backend.py  netwatch_backend_win.py  network-monitor.jsx  start.sh  start_windows.bat
dashboard/: LICENSE  index.html  package-lock.json  package.json
dashboard/.claude/: settings.local.json
dashboard/src/: App.jsx  index.css
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: main.rs
playbooks/: bandwidth_anomaly.yml  new_process_detected.yml  port_scan_detected.yml  suspicious_outbound.yml
soar/: __init__.py  correlator.py  feed_updater.py  models.py  playbooks.py  responder.py  threat_intel.py  threat_intel_api.py
