[package]
name = "netwatch"
version = "1.0.0"
edition = "2021"
description = "Netwatch — Local Network Monitor"
authors = ["CoerieBritz"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
